--- a/package.json
+++ b/package.json
@@ -12,10 +12,14 @@
   },
   "dependencies": {
     "@auth/supabase-adapter": "^1.7.4",
+    "@bsv/overlay": "^0.4.0",
+    "@bsv/sdk": "^1.6.8",
+    "@bsv/wallet-toolbox": "^1.5.1",
     "@hookform/resolvers": "^5.1.1",
     "@next/third-parties": "^15.1.7",
     "@openpanel/nextjs": "^1.0.7",
     "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-icons": "^1.3.2",
