--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@bsv/sdk": "^1.6.8",
     "@bsv/wallet-toolbox": "^1.5.1",
     "@hookform/resolvers": "^5.1.1",
+    "@inrupt/solid-client": "^2.0.0",
+    "@inrupt/solid-client-authn-browser": "^2.0.0",
+    "@inrupt/vocab-common-rdf": "^1.0.5",
     "@next/third-parties": "^15.1.7",
     "@openpanel/nextjs": "^1.0.7",
     "@radix-ui/react-alert-dialog": "^1.1.14",
